[gd_scene load_steps=9 format=3 uid="uid://cror63swkqvi6"]

[ext_resource type="Script" path="res://player.gd" id="1_5h38g"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_ujt4c"]
[ext_resource type="PackedScene" uid="uid://b3gcbn7dewqp7" path="res://gun.tscn" id="3_rqrun"]
[ext_resource type="PackedScene" uid="uid://blsscarrpruuw" path="res://second_gun.tscn" id="4_7f3hm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_px7it"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xuxsu"]
radius = 51.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g01ob"]
bg_color = Color(0, 0, 0, 0.529412)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l00gl"]
bg_color = Color(0.388235, 0.8, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_5h38g")

[node name="HappyBoo" parent="." instance=ExtResource("1_ujt4c")]
unique_name_in_owner = true
position = Vector2(-1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -3)
shape = SubResource("CircleShape2D_px7it")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_rqrun")]
position = Vector2(0, -27)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-2, -42)
shape = SubResource("CircleShape2D_xuxsu")
debug_color = Color(0.929412, 0.0941176, 0.607843, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -99.0
offset_top = -144.0
offset_right = 98.0
offset_bottom = -117.0
theme_override_styles/background = SubResource("StyleBoxFlat_g01ob")
theme_override_styles/fill = SubResource("StyleBoxFlat_l00gl")
value = 100.0
show_percentage = false

[node name="secondGun" parent="." instance=ExtResource("4_7f3hm")]
unique_name_in_owner = true
visible = false
position = Vector2(-14, -31)

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
